add_executable(kvcg server.cu)
target_link_libraries(kvcg PUBLIC lslab)
target_link_libraries(kvcg PUBLIC pthread)
target_link_libraries(kvcg PUBLIC kvstore)
target_link_libraries(kvcg PUBLIC tbbmalloc_proxy)
target_link_libraries(kvcg PUBLIC Boost::boost)

add_executable(tw twitterWL.cu)
target_link_libraries(tw PUBLIC lslab)
target_link_libraries(tw PUBLIC pthread)
target_link_libraries(tw PUBLIC kvstore)
target_link_libraries(tw PUBLIC tbbmalloc_proxy)
target_link_libraries(tw PUBLIC Boost::boost)
target_link_libraries(tw PUBLIC stdc++)

